Adds S3 image upload to db
Hasn't been tested but includes migrations to add image data to
profiles and beers.

Gemfile adds paperclip

Models have been updated to include has_attached_file

Used instructions from AWS site:
https://aws.amazon.com/articles/Ruby/846

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,9 +6,33 @@ default: &default
   pool: 5
 
 development:
-  <<: *default
-  database: <%= project_name %>_development
+  adapter: postgresql
+  encoding: utf8
+  database: beer-app-template_development
+  username: andreasantarlasci
+  password: PSQLikTTswr51
+  socket: /tmp/postgresql.sock
 
 test:
-  <<: *default
-  database: <%= project_name %>_test
+  adapter: postgresql
+  encoding: utf8
+  database: beer-app-template_test
+  username: andreasantarlasci
+  password: PSQLikTTswr51
+  socket: /tmp/postgresql.sock
+
+production:
+  adapter: postgresql
+  encoding: utf8
+  database: beer-app-template_production
+  username: andreasantarlasci
+  password: PSQLikTTswr51
+  socket: /tmp/postgresql.sock
+
+# development:
+#   <<: *default
+#   database: <%= project_name %>_development
+#
+# test:
+#   <<: *default
+#   database: <%= project_name %>_test
